--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
       </ul>
     </nav>
   </header>
-  <img src="./image/contact.png" class="image_area">
+  <img src="./image/shakehand.png" class="image_area">
   <div class="wrapper clearfix">
     <aside class="side_menu">
       <nav>
